--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.9.1",
+    "date-fns": "^2.29.3",
     "next": "^12.3.1",
     "react": "18.2.0",
+    "react-day-picker": "^8.3.5",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
