--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
+    "date-fns": "^2.29.3",
     "next": "^12.3.1",
     "react": "18.2.0",
+    "react-day-picker": "^8.3.5",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
