--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "date-fns": "^2.29.3",
