--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^12.3.4",
     "react": "18.2.0",
     "react-day-picker": "^8.3.5",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "eslint": "8.25.0",
