--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.9.1",
     "date-fns": "^2.29.3",
     "next": "^12.3.3",
+    "nextjs": "^0.0.3",
     "react": "18.2.0",
     "react-day-picker": "^8.3.5",
     "react-dom": "18.2.0"
