--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "next": "^13.0.5",
     "react": "^18.2.0",
     "react-day-picker": "^8.3.5",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "swr": "^1.3.0"
   },
