--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "date-fns": "^2.29.3",
+    "form-data": "^4.0.0",
     "next": "^13.0.5",
     "react": "^18.2.0",
     "react-day-picker": "^8.3.5",
