--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@szhsin/react-menu": "^3.3.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "date-fns": "^2.29.3",
