--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.29.3",
     "form-data": "^4.0.0",
     "formdata": "^0.10.4",
+    "js-cookie": "^3.0.1",
     "next": "^13.0.6",
     "react": "^18.2.0",
     "react-day-picker": "^8.3.5",
@@ -25,7 +26,7 @@
   },
   "devDependencies": {
     "eslint": "8.25.0",
-    "eslint-config-next": "^13.0.5",
+    "eslint-config-next": "^12.0.4",
     "sass": "^1.56.1"
   }
 }
